--- a/src/BTracking.DbMigrator/appsettings.json
+++ b/src/BTracking.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=BTracking;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=.;Database=BTracking;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "OpenIddict": {
     "Applications": {
