--- a/src/BTracking.Web/appsettings.json
+++ b/src/BTracking.Web/appsettings.json
@@ -3,7 +3,7 @@
     "SelfUrl": "https://localhost:44316"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=BTracking;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=.;Database=BTracking;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "StringEncryption": {
     "DefaultPassPhrase": "a9MpTMwFfN9NNHLF"
