--- a/src/BTracking.Domain/BTracking.Domain.csproj
+++ b/src/BTracking.Domain/BTracking.Domain.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="NetTopologySuite" Version="2.5.0" />
     <PackageReference Include="Volo.Abp.Emailing" Version="7.0.2" />
     <PackageReference Include="Volo.Abp.Identity.Domain" Version="7.0.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="7.0.2" />
