--- a/src/BTracking.EntityFrameworkCore/BTracking.EntityFrameworkCore.csproj
+++ b/src/BTracking.EntityFrameworkCore/BTracking.EntityFrameworkCore.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BTracking.Domain\BTracking.Domain.csproj" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.1" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="7.0.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="7.0.2" />
     <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="7.0.2" />
