--- a/src/BTracking.Web/appsettings.json
+++ b/src/BTracking.Web/appsettings.json
@@ -8,10 +8,10 @@
   "StringEncryption": {
     "DefaultPassPhrase": "a9MpTMwFfN9NNHLF"
   },
-  "Settings": {
-    "Volo.Abp.LeptonTheme.Style": "Style6", /* Options: Style1, Style2... Style6 */
-    "Volo.Abp.LeptonTheme.Layout.MenuPlacement": "Top", /* Options: Left, Top */
-    "Volo.Abp.LeptonTheme.Layout.MenuStatus": "AlwaysOpened", /* Options: AlwaysOpened, OpenOnHover */
-    "Volo.Abp.LeptonTheme.Layout.Boxed": "False" /* Options: True, False */
-  }
+  //"Settings": {
+  //  "Volo.Abp.LeptonTheme.Style": "Style6", /* Options: Style1, Style2... Style6 */
+  //  "Volo.Abp.LeptonTheme.Layout.MenuPlacement": "Top", /* Options: Left, Top */
+  //  "Volo.Abp.LeptonTheme.Layout.MenuStatus": "AlwaysOpened", /* Options: AlwaysOpened, OpenOnHover */
+  //  "Volo.Abp.LeptonTheme.Layout.Boxed": "False" /* Options: True, False */
+  //}
 }
