--- a/src/BTracking.Web/BTracking.Web.csproj
+++ b/src/BTracking.Web/BTracking.Web.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="HiveMQtt" Version="0.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.3" />
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
